--- a/Client/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/Client/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ConsoleApplication1.c">
+    <ClCompile Include="ConsoleApplication1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
