refactor: 채팅 출력 기능 분리 / 패킷 구조를 버퍼 길이, 버퍼 내용으로 변경

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -127,12 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="chatWindow.cpp" />
     <ClCompile Include="client.cpp" />
+    <ClCompile Include="constant.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="type.h" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="chatWindow.h" />
     <ClInclude Include="client.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
