--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -27,12 +27,21 @@
     <ClCompile Include="type.h">
       <Filter>헤더 파일</Filter>
     </ClCompile>
+    <ClCompile Include="chatWindow.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="constant.h">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="utils.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="chatWindow.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
